# metnum-project1

./: CMakeLists.txt  README.md  build_resources.sh  generate_cuantitative_outputs.sh  solucion.cbp
Informe/: Apendices.aux  Apendices.tex  Caratula.aux  Caratula.tex  Conclusiones.aux  Conclusiones.tex  Desarrollo.aux  Desarrollo.tex  Discusion.aux  Discusion.tex  Informe.aux  Informe.tex  IntroduccionTeorica.aux  IntroduccionTeorica.tex  Referencias.aux  Referencias.tex  Resultados.aux  Resultados.tex  caratula.sty  intro.aux  intro.tex  resumen.aux  resumen.tex
experimentacion/cualitativo/completo_distinto_p/: graph_err_p.m  p_error.tex
experimentacion/cualitativo/escalonado/: escalonado.txt  escalonado.txt.out  escalonado_distintos_p.tex  escalonado_p.m  escalonado_rank.tex  escalonado_table.m
experimentacion/cualitativo/malla/: malla.txt  malla.txt.out  malla_distintos_p.tex  malla_p_graph.m
experimentacion/cualitativo/pagina_popular/: pagina_popular.txt  pagina_popular.txt.out  pagina_popular_distintos_p.tex  pagina_popular_p.m  pagina_popular_rank.tex  pagina_popular_ranking.m
experimentacion/cualitativo/roba_exito/: roba_exito.txt  roba_exito.txt.out  roba_exito_rank.m  roba_exito_rank.tex
experimentacion/cuantitativo/: error_cmp.m
experimentacion/cuantitativo/outputs/: test_15_segundos.txt.out  test_30_segundos.txt.out
src/: generateMatrixA.cpp  tp1.cpp
src/matriz/: MatrizDiagonal.cpp  MatrizDiagonal.h  MatrizRala.cpp  MatrizRala.h  Tipos.h  resolver.cpp  resolver.h
tests/: test_matriz_diagonal.cpp  tests_catedra.cpp  tests_matriz_rala.cpp
tests/google-test/: gtest.cbp
